# nachricht

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
docs/: hacking.md
nachricht/: __init__.py
nachricht/auth/: __init__.py  models.py  service.py
nachricht/bus/: __init__.py  backends.py  saving_backends.py  service.py  signal.py  test_backends.py  test_backends_with_bus.py  test_bus.py
nachricht/config/: __init__.py
nachricht/db/: __init__.py
nachricht/i18n/: __init__.py  catalog.py  test_catalog.py
nachricht/llm/: __init__.py  client.py
nachricht/messenger/: __init__.py  context.py  routing.py  test_routing.py  tracing.py
nachricht/messenger/stub/: context.py  routing.py
nachricht/messenger/telegram/: __init__.py  context.py  routing.py
nachricht/options/: __init__.py  mixin.py  service.py  signal.py  test_options.py
