[project]
name = "nachricht"
version = "0.1.0"
description = "A library for building messenger bots."
authors = [
    {name = "Kirill Krasnoshchekov", email = "krvkir@gmail.com"}
]
license = {text = "GPL3"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask[async] (>=3.1.1,<4.0.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "sqlalchemy-utc (>=0.14.0,<0.15.0)",
    "flask-sqlalchemy (>=3.1.1,<4.0.0)",
    "flask-migrate (>=4.1.0,<5.0.0)",
    "flasgger (>=0.9.7.1,<0.10.0.0)",
    "pytest (>=8.3.5,<9.0.0)",
    "pytest-mock (>=3.14.1,<4.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "python-telegram-bot[webhooks] (>=22.3,<23.0)",
    "openai (>=1.82.1,<2.0.0)",
    "pytest-asyncio (>=1.0.0,<2.0.0)",
    "polib (>=1.2.0,<2.0.0)",
    "babel (>=2.17.0,<3.0.0)",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.poetry]
name = "nachricht"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.13,<4.0"

[build-system]
#requires = ["poetry-core>=2.0.0,<3.0.0"]
#build-backend = "poetry.core.masonry.api"
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
